# GenIITeamBuilder

./: .gitignore  CMakeLists.txt  MyHandler.h  main.cpp
data/: all_pokemon.json  attacker_types.json  defender_types.json
include/rapidjson/: document.h
src/: AttackUtil.h  BattleField.cpp  BattleField.h  BattleResult.h  BattleSimulator.h  Cache.h  Combination.h  DamageCalculator.cpp  DamageCalculator.h  DefenseMultipliers.cpp  DefenseMultipliers.h  PokemonDataSource.cpp  PokemonDataSource.h  PokemonInformation.h  PokemonStateCache.cpp  PokemonStateCache.h  PokemonType.cpp  PokemonType.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeCache.h  Timer.h  TypeChartDataSource.cpp  TypeChartDataSource.h  main.cpp
src/data_class/: AllStats.h  Attack.h  BaseStats.h  BattleResult.h  Category.cpp  Category.h  Pokemon.h  PokemonInformation.h  PokemonState.cpp  PokemonState.h  PokemonStateSubset.h  PokemonType.cpp  PokemonType.h  Stat.cpp  Stat.h  StatModifiers.h  Stats.h
